--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "postinitial": "ng build --aot --prod"
+        "postinstall": "ng build --aot --prod"
     },
     "private": true,
     "dependencies": {
